kubernetes/projects/examples/ingress/ingress.yml
# Example of an Ingress definition for a service.
# This example uses a Service port number rather than a Service named port.
# Service: my-clusterip-svc (Definition in ../services/clusterip-service.yml).

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ingress
spec:
    rules:
    - http:
        paths:
        - path: /somepath
          pathType: Prefix
          backend:
              service:
                  name: my-clusterip-svc
                  port:
                      number: 80
